--- a/app/src/main/res/layout/activity_moviedetail.xml
+++ b/app/src/main/res/layout/activity_moviedetail.xml
@@ -146,28 +146,30 @@
                 android:padding="10dp">
 
                 <LinearLayout
-                    android:id="@+id/ll_tmdb_rating"
+                    android:id="@+id/ll_tomato_rating"
                     android:layout_width="0dp"
                     android:layout_height="80dp"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
                     <ImageView
+                        android:id="@+id/iv_tomato_popcorn_state"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="6"
-                        android:src="@drawable/tmdb_logo" />
+                        android:src="@drawable/popcorn_good" />
 
                     <TextView
-                        android:id="@+id/tv_tmdb_rating"
+                        android:id="@+id/tv_tomato_rating"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="2"
                         tools:text="8.3" />
 
                     <TextView
-                        android:id="@+id/tv_tmdb_rating_count"
+                        android:id="@+id/tv_tomato_rating_count"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="2"
@@ -209,7 +211,8 @@
                     android:layout_height="80dp"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
                     <ImageView
                         android:layout_width="wrap_content"
