--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,13 +27,15 @@
         <item name="android:textColor">@color/detail_title</item>
         <item name="android:textSize">18sp</item>
     </style>
+
     <style name="detail_content" parent="detail_text">
         <item name="android:color">@color/detail_content</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:textIsSelectable">true</item>
     </style>
 
     <style name="transparentText">
-        <item name="android:textColor" >#00000000</item>
+        <item name="android:textColor">#00000000</item>
     </style>
 
     <style name="title_text">
