--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/sync_state"
+        android:orderInCategory="100"
+        android:title="@string/sync_state"
+        android:visible="false"
+        app:showAsAction="always" />
     <item
         android:id="@+id/action_type_switch"
         android:orderInCategory="100"
