--- a/app/src/main/res/layout/item_recommendations.xml
+++ b/app/src/main/res/layout/item_recommendations.xml
@@ -36,8 +36,9 @@
             <TextView
                 android:id="@+id/tv_movie_title"
                 style="@style/detail_content"
+                android:gravity="center"
                 android:ellipsize="end"
-                android:maxLines="1"
+                android:maxLines="2"
                 tools:text="TRON: Legacy" />
 
             <TextView
